--- a/beauty-spa.css
+++ b/beauty-spa.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    19/11/2021
+Last change:    07/12/2021
 Author:   creativemaze
 Primary use:    Beauty Spa
 -------------------------------------------------------------------*/
@@ -56,7 +56,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -67,7 +67,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -431,13 +431,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .header__content > div{
-	animation-duration: 1s;
-	animation-delay: 0.5s;
+	animation-duration: 2s;
+	animation-delay: 1s;
 	display: none;
 }
 
 .header__content > div.active{
 	display: block;
+	animation-play-state: running !important;
 }
 
 .header-title__main{
