--- a/gym-fitness.css
+++ b/gym-fitness.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    20/11/2021
+Last change:    08/12/2021
 Author:    creativemaze
 Primary use:    Gym-Fitness
 -------------------------------------------------------------------*/
@@ -57,7 +57,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -68,7 +68,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -743,7 +743,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .title_group{
 	flex: 25%;
 	width: 25%;
-	transition: 0.5s;
 }
 
 .title_group a{
@@ -754,7 +753,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	letter-spacing: 1px;
 	cursor: pointer;
-	transition: .5s;
+	transition: 0.5s;
 	text-decoration: none;
 	text-align: center;
 	display: block;
@@ -853,7 +852,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 18px;
 	font-weight: 600;
 	display: block;
-	transition: 0.5s;
 	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.4em;
@@ -866,7 +864,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 10px;
 	display: block;
 	color: #696969;
-	transition: 0.5s;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.5em;
@@ -1195,7 +1192,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	min-width: 250px;
 	width: 100%;
 	opacity: 0;
-	transition: opacity 0.3s;
+	transition: opacity 0.5s;
 }
 
 .day_list ul{
