--- a/travel.css
+++ b/travel.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    22/11/2021
+Last change:    09/12/2021
 Author:    creativemaze
 Primary use:    Travel
 -------------------------------------------------------------------*/
@@ -55,7 +55,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -66,7 +66,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -715,17 +715,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 }
 
-.icon_crumb{
-	max-width: 350px;
-	height: 1px;
-	display: block;
-	border-bottom: double 4px #ffffff;
-	margin: 0 auto 0;
-	transition: 0.5s;
-	visibility: hidden;
-	opacity: 0;
-}
-
 .travel_box{
 	max-width: 300px;
 	margin: auto;
@@ -832,11 +821,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .travel_box:hover .info_content h3,
 .travel_box:hover .info_content p{
 	color: #ffffff;
-}
-
-.travel_col:hover .icon_crumb{
-	visibility: visible;
-	opacity: 1;
 }
 
 /* --- 3.3. Travel Area Three --- */
@@ -1098,10 +1082,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .tour_image img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	overflow: hidden;
 	display: block;
 }
 
@@ -1114,7 +1096,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	height: 100%;
 	width: 100%;
 	opacity: 1;
-	transition: ease-in-out 1.25s;
 	background: rgba(0,0,0,0.6);
 }
 
@@ -1213,7 +1194,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 12px;
 	padding-left: 12px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .blog_content{
@@ -1236,7 +1216,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .blog_col img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
 	display: block;
@@ -1416,18 +1395,20 @@ a.blog_btn:hover .blog_crumb{
 .travel_area_seven{
 	max-width: 1280px;
 	margin: 0 auto;
-	padding: 0 30px;
+	padding: 0 25px;
 	min-height: 275px;
 	height: 100%;
 	background-color: #00cdac;
+	width: calc(100% - 50px);
 }
 
 /* --- 3.8. Travel Area Eight --- */
 .travel_area_eight{
 	max-width: 1200px;
 	margin: 0 auto 2em;
-	padding: 0 35px;
+	padding: 0 30px;
 	margin-top:  -200px;
+	width: calc(100% - 60px);
 }
 
 .travel_group_eight{
@@ -1435,7 +1416,7 @@ a.blog_btn:hover .blog_crumb{
 	display: flex;
 	flex-wrap: wrap;
 	background-color: #ffffff;
-	padding: 40px 30px 0;
+	padding: 40px 25px 0;
 	margin-top: 30px;
 }
 
@@ -1481,7 +1462,6 @@ a.blog_btn:hover .blog_crumb{
 .col_info input[type="email"]{
 	width: 350px;
 	padding: 10px 20px 14px;
-	padding-right: 50px;
 	border: 0;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
@@ -1889,6 +1869,10 @@ a.footer-brand img{
 		margin-left: 0;
 	}
 	
+	.col_head h3{
+		font-size: 25px;
+	}
+	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
@@ -1902,10 +1886,6 @@ a.footer-brand img{
 	.blog_col{
 		padding-left: 0;
 		padding-right: 0;
-	}
-	
-	.col_head h3{
-		font-size: 25px;
 	}
 }
 
