--- a/bakery.css
+++ b/bakery.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    24/11/2021
+Last change:    09/12/2021
 Author:    creativemaze
 Primary use:    Bakery
 -------------------------------------------------------------------*/
@@ -511,7 +511,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: block;
 	overflow: hidden;
 	margin: auto;
-	transition: 0.5s;
 }
 
 .bakery_image{
@@ -520,11 +519,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 5px;
 	padding-bottom: 10px !important;
 	padding-top: 10px !important;
-	transition: ease-in-out 0.5s;
 }
 
 .bakery_image img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
 	display: block;
@@ -579,7 +576,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .title_group{
 	flex: 20%;
 	width: 20%;
-	transition: .5s;
 	text-align: center;
 }
 
@@ -597,7 +593,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	border-radius: 50%;
 	letter-spacing: 1px;
 	cursor: pointer;
-	transition: .5s;
+	transition: 0.5s;
 	text-decoration: none;
 	display: block;
 	padding: 12px;
@@ -968,7 +964,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .special_col img{
-	vertical-align: middle;
 	max-width: 100%;
 	height: auto;
 	display: block;
@@ -1074,14 +1069,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex: 33.33%;
 	width: 33.33%;
 	padding: 0 15px;
-	position: relative;
 }
 
 .bakery_box_col{
 	flex: 66.66%;
 	width: 66.66%;
 	padding: 0 15px;
-	position: relative;
 }
 
 .wide_area{
@@ -1343,7 +1336,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .blog_col img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
 	display: block;
@@ -1550,14 +1542,6 @@ a.blog_btn:hover .blog_crumb{
 	display: block;
 	text-align: center;
 	margin-bottom: 14px;
-}
-
-.client_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	transition: 0.5s;
-	overflow: hidden;
 }
 
 .client_name{
