--- a/scientific-research.css
+++ b/scientific-research.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    25/11/2021
+Last change:    09/12/2021
 Author:    creativemaze
 Primary use:    Scientific Research
 -------------------------------------------------------------------*/
@@ -637,7 +637,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .research_grid_col img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
 	display: block;
@@ -796,7 +795,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .square_right_col{
 	flex: 66.66%;
 	width: 66.66%;
-	position: relative;
 	padding: 0 15px;
 }
 
@@ -804,7 +802,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex: 33.33%;
 	width: 33.33%;
 	padding: 0 15px;
-	position: relative;
 }
 
 .square_area{
@@ -853,7 +850,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .square_image img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
 	display: block;
@@ -1335,7 +1331,6 @@ a.blog_btn::after{
 	padding: 35px 30px; 
 	text-align: left;
 	background: #ffffff;
-	transition: 0.5s;
 	min-height: 50px;
 	height: 100%
 }
@@ -1779,6 +1774,10 @@ a.footer-brand img{
 	.header-title {
 		padding: 35px 25px;
 		max-width: 300px;
+	}
+	
+	.research_area_eight{
+		margin-top: -260px;
 	}
 }
 
