--- a/freelancer.css
+++ b/freelancer.css
@@ -700,7 +700,7 @@ li.slick-active button{
 
 .num_info{
 	width: 100%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+	background-color: #f6f6f6;
 	padding: 25px 20px;
 	margin-bottom: 10px;
 	max-width: 350px;
@@ -719,7 +719,7 @@ li.slick-active button{
 }
 
 .list_num h4{
-	color: #111111;
+	color: #D31027;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 20px;
 	font-weight: 600;
@@ -850,7 +850,7 @@ li.slick-active button{
 
 .square_box{
 	width: 100%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+	background-color: #f6f6f6;
 	padding: 25px 20px;
 	max-width: 350px;
 	margin: 30px auto;
