--- a/blog-single-post.css
+++ b/blog-single-post.css
@@ -900,9 +900,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .sidebar_list > ul li a{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 500;
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
 	display: inline-block;
 	text-decoration: none;
 	color: #696969;
