--- a/blog-list-left-image.css
+++ b/blog-list-left-image.css
@@ -730,7 +730,7 @@ a.footer-brand img{
 	display: block;
 	width: 100%;
 	padding: 12px 10px 14px;
-	background-color: #f6f6f6;
+	background-color: #ffffff;
 	border: none;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
